Added things to the read me

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,10 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+
+Welcome Friends! This is the read me. I use this as kinda like an author page.
+just write down your name and what you did. 
+
+for example 
+
+Danny Apacik: Created Git Repo, Set Up Project Settings, SR Programmer. 
