--- a/CrabbyPattyNew/Assembly-CSharp.csproj
+++ b/CrabbyPattyNew/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\burgerHighlight.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\PlayerControls.cs" />
     <Compile Include="Assets\Scripts\SpawnToppings.cs" />
